@@ -537,6 +537,7 @@ Localization
             #LOC_BDArmory_Settings_TournamentRoundType = Round Type
             #LOC_BDArmory_Settings_TournamentDelayBetweenHeats = Delay Between Heats
             #LOC_BDArmory_Settings_TournamentTimeWarpBetweenRounds = TimeWarp Between Rounds
+            #LOC_BDArmory_Settings_TournamentTimeWarpDaylight = Daylight
             #LOC_BDArmory_Settings_TournamentRounds = Rounds
             #LOC_BDArmory_Settings_TournamentVesselsPerHeat = Vessels Per Heat
             #LOC_BDArmory_Settings_TournamentVesselsPerTeam = Vessels Per Team Per Heat
